--- a/assets/css/bulk-videos.css
+++ b/assets/css/bulk-videos.css
@@ -1,59 +1,87 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto:wght@400;500&display=swap');
+
+*{
     margin: 0;
     padding: 0;
 }
 
-.bulk-video-top-container{
-    justify-content: center;
+body {
+    font-family: Inter;
+}
+
+.heading{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
     align-items: center;
+    min-height: 60px;
+    overflow: hidden;
+    position: relative;
+    padding: 0 3rem;
 }
 
-.bulk-video-iPrep-img {
-    margin-left: 610px;
+.dashboard__img {
+    height: 80px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    align-self: center;
+    justify-self: center;
 }
 
-.bulk-video-hrule-1 {
+#logout{
+    width: 75px;
+    height: 27px;
+    cursor: pointer;
+    font-size: 12px;
+    font-weight: 500;
+    border-radius: 4px;
+    color: #0077FF;
+    background-color: #FFFFFF;
+    border: 1px solid #0077FF;
+}
+
+.hrule_1{
     width: 100vw;
+    margin: 0;
     border: 0.5px solid rgba(0, 0, 0, 0.05);
 }
 
-.bulk-video-div-2 {
+.bulk_video_top_container {
     display: flex;
-    flex-direction: row;
+    height: 108px;
 }
 
-.bulk-video-active {
-    width: 35px;
-    height: 35px;
-    margin-left: 144px;
-    margin-top: 39px;
+.active {
+    margin-left: 153px;
+    margin-top: 25px;
 }
 
-.bulk-video-text {
-    width: 222px;
-    height: 27px;
-    font-family: sans-serif;
+.bulk_video_span_text {
     font-size: 22px;
-    line-height: 27px;
-    text-align: center;
     color: #64748B;
-    margin-left: 430px;
-    margin-top: 39px;
+    font-weight: 500;
+    margin-top: 30px;
+    margin-left: 475px;
+    line-height: 27px;
 }
 
-.bulk-video-hr {
-    border: 1px solid #e1e1e1;
-    flex: 1;
+hr {
+    width: 1152px;
     height: 0px;
-    overflow: hidden;
-    margin: 2.5rem 9rem 2rem 9rem;
+    margin-bottom: 33px;
+    margin-left: 144px;
+    border: 1px solid #DEDEDE;
 }
 
 .bulk-video-instruction-heading {
     width: 125px;
     height: 27px;
     margin-left: 243px;
-    font-family: sans-serif;
+    font-weight: 500;
     font-size: 22px;
     line-height: 27px;
     color: #64748B;
@@ -76,20 +104,11 @@ body{
 }
 
 .bulk-video-instruction-text-1{
-    font-size: 20px;
+    font-size: 18px;
     line-height: 22px;
     color: #64748B;
-    font-family: sans-serif;
-    font-weight: 500;
-}
-
-.bulk-video-instruction-text-2{
-    font-size: 20px;
-    line-height: 22px;
-    color: #64748B;
-    font-family: sans-serif;
-    font-weight: 500;
-    margin-top: 10px;
+    font-weight: 400;
+    margin-bottom: 10px;
 }
 
 .bulk-video-bottom-container{
@@ -116,16 +135,12 @@ body{
 }
 
 .bulk-video-download-text{
-    width: 180px;
-    height: 17px;
-    font-family: sans-serif;
-    font-size: 18px;
+    font-size: 14px;
+    font-weight: 600;
+    margin-right: 10px;
     line-height: 17px;
     color: #64748B;
-}
-
-.bulk-video-dwnld-img {
-    width: 30px;
+    cursor: pointer;
 }
 
 .bulk-video-upload-assessment{
@@ -147,10 +162,10 @@ body{
 }
 
 .books-upload-text{
-    width: 180px;
-    height: 17px;
-    font-family: sans-serif;
-    font-size: 18px;
+    font-size: 14px;
+    font-weight: 600;
+    margin-right: 10px;
+    cursor: pointer;
     line-height: 17px;
     color: #64748B;
     border: none;
@@ -217,7 +232,6 @@ body{
     width: 500px;
     text-align: center;
     font-size: 25px;
-    font-family: sans-serif;
     font-size: 25px;
     line-height: 40px;
     color: #64748B;
@@ -241,19 +255,6 @@ body{
     align-items: center;
 }
 
-.bulk-video-download-text-2{
-    font-family: sans-serif;
-    font-size: 18px;
-    line-height: 17px;
-    color: #64748B;
-    margin-right: 10px;
-}
-
-.bulk-video-dwnld-img-2 {
-    width: 30px;
-}
-
-
 #set_questions{
     display: flex;
     align-items: center;
@@ -269,10 +270,9 @@ body{
 }
 
 .videos-select-text{
-    width: 137px;
-    height: 24px;
-    font-family: sans-serif;
     font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
     text-align: center;
     color: #64748B;
 }
@@ -282,39 +282,35 @@ body{
     height: 56px;
     border: 1px solid #64748B;
     border-radius: 6px;
-    font-family: sans-serif;
     font-size: 18px;
     color: #64748B;
 }
 
-.question_area {
-    width: 1050px;
-    height: 107px;
+.vid-set-ques {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 70px;
+}
+
+.vid-ques-forms{
+    position: relative;
+}
+
+.vid-ques-area {
+    width: 760px;
+    height: 146px;
     background: #FAFAFA;
     border-radius: 20px;
-    margin-top: 15px;
-    display: flex;
+    margin-top: 20px;
     align-items: center;
     flex-wrap: wrap;
     overflow-y: auto;
-    margin-top: 2rem;
 }
 
-.option_area{
-    width: 1050px;
-    height: 300px;
-    background: #FAFAFA;
-    border-radius: 20px;
-    margin-top: 15px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    overflow-y: auto;
-}
-
-.question_num {
+.vid-question-num {
     border-radius: 100%;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -323,12 +319,12 @@ body{
     margin-left: 40px;
 }
 
-.question {
+.video-name {
     border-style: none;
     width: 640px;
     height: 40px;
     margin-left: 30px;
-    font-family: sans-serif;
+    margin-top: 20px;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
@@ -337,26 +333,18 @@ body{
     background-color: #FAFAFA;
 }
 
-.option {
+.vid-link {
     border-style: none;
     width: 640px;
     height: 40px;
-    margin-left: 30px;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 24px;
     color: #475569;
     background-color: #FAFAFA;
-}
-
-.quesImage {
-    margin-left: 32px;
-}
-
-.optImage {
-    margin-left: 32px;
+    margin-left: 85px;
+    margin-top: 20px;
 }
 
 #submit{
@@ -371,7 +359,6 @@ body{
     line-height: 22px;
     color: #FFFFFF;
     margin-bottom: 3rem;
-    font-family: sans-serif;
     background: #0077FF;
     justify-content: center;
     align-items: center;
@@ -448,7 +435,6 @@ body{
     cursor: pointer;
     margin-top: 25px;
     border-style: none;
-    font-family: sans-serif;
     font-size: 18px;
     line-height: 22px;
     color: black;
@@ -462,7 +448,6 @@ body{
     cursor: pointer;
     margin-top: 25px;
     border-style: none;
-    font-family: sans-serif;
     font-size: 18px;
     line-height: 22px;
     color: #FFFFFF;
@@ -472,12 +457,11 @@ body{
     transform: translateY(4px);
 }
 
-#ImgProgress, #successMsg, #textSpan, #err{
+#submitMsg{
     font-size: 24px;
     font-weight: 400;
     line-height: 150%;
     font-style: normal;
     text-align: center;
-    font-family: sans-serif;
     color: #334155;
 }
