--- a/views/preview_books_bulk_upload.ejs
+++ b/views/preview_books_bulk_upload.ejs
@@ -2,10 +2,10 @@
     <span class="books-select-text">Select The Tab</span><br>
     <select class="books-select-topics" name="topics" id="topics" onchange="displayNextBtn()">
         <option selected value="">Select Topic</option>
-        <option id="opt-1" value="Relations and Functions">Relations And Functions</option>
+        <!-- <option id="opt-1" value="Relations and Functions">Relations And Functions</option>
         <option id="opt-2" value="Algebra">Algebra</option>
         <option id="opt-3" value="Probability">Probability</option>
-        <option id="opt-4" value="Calculus">Calculus</option>
+        <option id="opt-4" value="Calculus">Calculus</option> -->
     </select>
     <div id="set_questions"></div>
     <div>
