--- a/assets/css/assessment.css
+++ b/assets/css/assessment.css
@@ -1,40 +1,70 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto:wght@400;500&display=swap');
+
+*{
     margin: 0;
     padding: 0;
 }
 
-.top__container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+body {
+    font-family: Inter;
 }
 
-.iPrep__img {
-    margin-top: 40px;
-    margin-left: 610px;
+.heading{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    min-height: 60px;
+    overflow: hidden;
+    position: relative;
+    padding: 0 3rem;
+}
+
+.dashboard__img {
+    height: 80px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    align-self: center;
+    justify-self: center;
+}
+
+#logout{
+    width: 75px;
+    height: 27px;
+    cursor: pointer;
+    font-size: 12px;
+    font-weight: 500;
+    border-radius: 4px;
+    color: #0077FF;
+    background-color: #FFFFFF;
+    border: 1px solid #0077FF;
+}
+
+.hrule_1{
+    width: 100vw;
+    margin: 0;
+    border: 0.5px solid rgba(0, 0, 0, 0.05);
+}
+
+.top__container {
+    display: flex;
 }
 
 .active {
-    width: 35px;
-    height: 35px;
-    display: flex;
-    justify-content: flex-start;
-    margin-left: 144px;
+    margin-left: 153px;
+    margin-top: 25px;
 }
 
 .span__text {
-    width: 222px;
-    height: 27px;
-    margin-left: 609px;
-    margin-top: 168px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 500;
     font-size: 22px;
-    line-height: 27px;
-    text-align: center;
     color: #64748B;
+    margin-top: 30px;
+    margin-left: 434px;
+    line-height: 27px;
 }
 
 hr {
@@ -56,8 +86,7 @@ hr {
     cursor: pointer;
     margin-top: 50px;
     margin-left: 144px;
-    background: rgba(0, 119, 255, 0.05);
-    border: 2px solid #64748B;
+    border: 1px solid #64748B;
     box-sizing: border-box;
     border-radius: 8px;
     display: flex;
@@ -80,13 +109,12 @@ hr {
     height: 22px;
     margin-left: 11px;
     margin-top: 17px;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     text-align: center;
-    color: #64748B;
+    color: #475569;
 }
 
 #bulk__upload {
@@ -95,8 +123,7 @@ hr {
     cursor: pointer;
     margin-top: 50px;
     margin-left: 24px;
-    background: rgba(0, 119, 255, 0.05);
-    border: 2px solid #64748B;
+    border: 1px solid #64748B;
     box-sizing: border-box;
     border-radius: 8px;
     display: flex;
@@ -119,13 +146,12 @@ hr {
     height: 22px;
     margin-left: 11px;
     margin-top: 17px;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     text-align: center;
-    color: #64748B;
+    color: #475569;
 }
 
 .middle__hr {
@@ -139,6 +165,7 @@ hr {
 .bottom__container {
     display: flex;
     flex-flow: row wrap;
+    margin-bottom: 25px;
 }
 
 .bottom__text {
@@ -146,12 +173,12 @@ hr {
     height: 27px;
     margin-left: 144px;
     margin-top: 23px;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 22px;
     line-height: 27px;
-    color: #94A3B8;
+    text-align: center;
+    color: #1E293B;
     justify-content: flex-start;
 }
 
@@ -184,7 +211,6 @@ hr {
 .assessment_time_stamp{
     width: 86px;
     height: 19px;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -197,7 +223,6 @@ hr {
 .assessment_name, .assessment_link{
     width: 86px;
     height: 19px;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -211,7 +236,6 @@ hr {
 .assessment_link {
     width: 86px;
     height: 19px;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -283,7 +307,6 @@ hr {
 	width: 262px;
     height: 24px;
     margin-left: 130px;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
@@ -320,7 +343,6 @@ hr {
     border: 1px solid #CBD5E1;
     box-sizing: border-box;
     border-radius: 8px;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -336,7 +358,6 @@ hr {
     border: 1px solid #CBD5E1;
     box-sizing: border-box;
     border-radius: 8px;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -352,7 +373,6 @@ hr {
     margin-top: 40px;
     margin-left: 82px;
     margin-bottom: 30px;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -362,10 +382,6 @@ hr {
     background: #0077FF;
     border-radius: 8px;
     border: 2px solid #0077FF;
-}
-
-.btn:hover{
-    border-color: #64748B;
 }
 
 
@@ -428,7 +444,6 @@ hr {
 	width: 262px;
     height: 24px;
     margin-left: 119px;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
@@ -465,7 +480,6 @@ hr {
     border: 1px solid #CBD5E1;
     box-sizing: border-box;
     border-radius: 8px;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -481,7 +495,6 @@ hr {
     border: 1px solid #CBD5E1;
     box-sizing: border-box;
     border-radius: 8px;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -496,7 +509,6 @@ hr {
     margin-bottom: 40px;
     width: 368px;
     height: 56px;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -512,90 +524,69 @@ hr {
     border-color: #64748B;
 }
 
-/* CSS For Dynamic questions display */
-
-
-.question_area {
-    width: 1050px;
-    height: 107px;
-    background: #FAFAFA;
-    border-radius: 20px;
-    margin-top: 15px;
+#tableDiv, .tableBody{
     display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    overflow-y: auto;
-    margin-top: 2rem;
-}
-
-.option_area{
-    width: 1050px;
-    height: 300px;
-    background: #FAFAFA;
-    border-radius: 20px;
-    margin-top: 15px;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
     flex-direction: column;
-    overflow-y: auto;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-left: 90px;
 }
 
-.question_num {
-    border-radius: 100%;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    color: #334155;
-    margin-left: 40px;
+#tableDiv{
+    width: 80%;
 }
 
-.question {
-    border-style: none;
-    width: 640px;
-    height: 40px;
-    margin-left: 30px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
+.tableHead{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    border-radius: 10px;
+    margin-left: 90px;
+    justify-content: center;
+}
+
+.tableRow{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+}
+
+.tableRow{
+    background-color: #F9F9F9;
+    height: 70px;
+}
+
+.columnHeading{
+    display: flex;
+    flex: 1;
+    width: 20%;
+    justify-content: center;
+    align-items: center;
+    padding: 0.6rem 1rem;
     color: #475569;
-    background-color: #FAFAFA;
 }
 
-.option {
-    border-style: none;
-    width: 640px;
-    height: 40px;
-    margin-left: 30px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
-    color: #475569;
-    background-color: #FAFAFA;
+.tableData{
+    display: flex;
+    flex: 1;
+    width: 20%;
+    font-size: 14px;
+    justify-content: center;
+    align-items: center;
+    padding: 0.6rem 1rem;
+    color: #1E293B;
 }
 
-.quesImage {
-    margin-left: 32px;
-}
-
-.optImage {
-    margin-left: 32px;
-}
-
-img[src=""] {
-    display: none;
-}
-
-input[value=""]{
-    display: none;
-}
-
-.opt_a, .opt_b, .opt_c,  .opt_d{
-    margin-bottom: 20px;
+.view{
+    width: 78px;
+    height: 34px;
+    cursor: pointer;
+    border-radius: 3px;
+    border: 1.3px solid;
+    color: #0070FF;
+    background: rgba(0, 112, 255, 0.05);
+    border-color: #0070FF;
 }
