--- a/assets/css/bulk-books.css
+++ b/assets/css/bulk-books.css
@@ -1,59 +1,87 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto:wght@400;500&display=swap');
+
+*{
     margin: 0;
     padding: 0;
 }
 
-.bulk-book-top-container{
-    justify-content: center;
+body {
+    font-family: Inter;
+}
+
+.heading{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
     align-items: center;
+    min-height: 60px;
+    overflow: hidden;
+    position: relative;
+    padding: 0 3rem;
 }
 
-.bulk-book-iPrep-img {
-    margin-left: 610px;
+.dashboard__img {
+    height: 80px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    align-self: center;
+    justify-self: center;
 }
 
-.bulk-book-hrule-1 {
+#logout{
+    width: 75px;
+    height: 27px;
+    cursor: pointer;
+    font-size: 12px;
+    font-weight: 500;
+    border-radius: 4px;
+    color: #0077FF;
+    background-color: #FFFFFF;
+    border: 1px solid #0077FF;
+}
+
+.hrule_1{
     width: 100vw;
+    margin: 0;
     border: 0.5px solid rgba(0, 0, 0, 0.05);
 }
 
-.bulk-book-div-2 {
+.bulk_book_top_container {
     display: flex;
-    flex-direction: row;
+    height: 108px;
 }
 
-.bulk-book-active {
-    width: 35px;
-    height: 35px;
-    margin-left: 144px;
-    margin-top: 39px;
+.active {
+    margin-left: 153px;
+    margin-top: 25px;
 }
 
-.bulk-book-text {
-    width: 222px;
-    height: 27px;
-    font-family: sans-serif;
+.bulk_book_span_text {
     font-size: 22px;
-    line-height: 27px;
-    text-align: center;
     color: #64748B;
-    margin-left: 430px;
-    margin-top: 39px;
+    font-weight: 500;
+    margin-top: 30px;
+    margin-left: 475px;
+    line-height: 27px;
 }
 
-.bulk-book-hr {
-    border: 1px solid #e1e1e1;
-    flex: 1;
+hr {
+    width: 1152px;
     height: 0px;
-    overflow: hidden;
-    margin: 2.5rem 9rem 2rem 9rem;
+    margin-bottom: 33px;
+    margin-left: 144px;
+    border: 1px solid #DEDEDE;
 }
 
 .bulk-book-instruction-heading {
     width: 125px;
     height: 27px;
     margin-left: 243px;
-    font-family: sans-serif;
+    font-weight: 500;
     font-size: 22px;
     line-height: 27px;
     color: #64748B;
@@ -76,21 +104,20 @@ body{
 }
 
 .bulk-book-instruction-text-1{
-    font-size: 20px;
+    font-size: 18px;
     line-height: 22px;
     color: #64748B;
-    font-family: sans-serif;
-    font-weight: 500;
+    font-weight: 400;
+    margin-bottom: 10px;
 }
 
-.bulk-book-instruction-text-2{
+/* .bulk-book-instruction-text-2{
     font-size: 20px;
     line-height: 22px;
     color: #64748B;
-    font-family: sans-serif;
     font-weight: 500;
     margin-top: 10px;
-}
+} */
 
 .bulk-book-bottom-container{
     display: flex;
@@ -116,16 +143,12 @@ body{
 }
 
 .bulk-book-download-text{
-    width: 180px;
-    height: 17px;
-    font-family: sans-serif;
-    font-size: 18px;
+    font-size: 14px;
+    font-weight: 600;
+    margin-right: 10px;
     line-height: 17px;
     color: #64748B;
-}
-
-.bulk-book-dwnld-img {
-    width: 30px;
+    cursor: pointer;
 }
 
 .bulk-book-upload-assessment{
@@ -147,10 +170,10 @@ body{
 }
 
 .books-upload-text{
-    width: 180px;
-    height: 17px;
-    font-family: sans-serif;
-    font-size: 18px;
+    font-size: 14px;
+    font-weight: 600;
+    margin-right: 10px;
+    cursor: pointer;
     line-height: 17px;
     color: #64748B;
     border: none;
@@ -217,7 +240,6 @@ body{
     width: 500px;
     text-align: center;
     font-size: 25px;
-    font-family: sans-serif;
     font-size: 25px;
     line-height: 40px;
     color: #64748B;
@@ -241,18 +263,6 @@ body{
     align-items: center;
 }
 
-.bulk-book-download-text-2{
-    font-family: sans-serif;
-    font-size: 18px;
-    line-height: 17px;
-    color: #64748B;
-    margin-right: 10px;
-}
-
-.bulk-book-dwnld-img-2 {
-    width: 30px;
-}
-
 #set_questions{
     display: flex;
     align-items: center;
@@ -268,10 +278,9 @@ body{
 }
 
 .books-select-text{
-    width: 137px;
-    height: 24px;
-    font-family: sans-serif;
     font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
     text-align: center;
     color: #64748B;
 }
@@ -281,81 +290,8 @@ body{
     height: 56px;
     border: 1px solid #64748B;
     border-radius: 6px;
-    font-family: sans-serif;
     font-size: 18px;
     color: #64748B;
-}
-
-.question_area {
-    width: 1050px;
-    height: 107px;
-    background: #FAFAFA;
-    border-radius: 20px;
-    margin-top: 15px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    overflow-y: auto;
-    margin-top: 2rem;
-}
-
-.option_area{
-    width: 1050px;
-    height: 300px;
-    background: #FAFAFA;
-    border-radius: 20px;
-    margin-top: 15px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    overflow-y: auto;
-}
-
-.question_num {
-    border-radius: 100%;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    color: #334155;
-    margin-left: 40px;
-}
-
-.question {
-    border-style: none;
-    width: 640px;
-    height: 40px;
-    margin-left: 30px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
-    color: #475569;
-    background-color: #FAFAFA;
-}
-
-.option {
-    border-style: none;
-    width: 640px;
-    height: 40px;
-    margin-left: 30px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
-    color: #475569;
-    background-color: #FAFAFA;
-}
-
-.quesImage {
-    margin-left: 32px;
-}
-
-.optImage {
-    margin-left: 32px;
 }
 
 #submit{
@@ -370,7 +306,6 @@ body{
     line-height: 22px;
     color: #FFFFFF;
     margin-bottom: 3rem;
-    font-family: sans-serif;
     background: #0077FF;
     justify-content: center;
     align-items: center;
@@ -439,20 +374,6 @@ body{
     margin-top: 30px;
 }
 
-.reUpload{
-    width: 183px;
-    height: 40px;
-    background: #D3D3D3;
-    border-radius: 8px;
-    cursor: pointer;
-    margin-top: 25px;
-    border-style: none;
-    font-family: sans-serif;
-    font-size: 18px;
-    line-height: 22px;
-    color: black;
-}
-
 .finalSubmit{
     width: 183px;
     height: 40px;
@@ -461,7 +382,6 @@ body{
     cursor: pointer;
     margin-top: 25px;
     border-style: none;
-    font-family: sans-serif;
     font-size: 18px;
     line-height: 22px;
     color: #FFFFFF;
@@ -471,12 +391,64 @@ body{
     transform: translateY(4px);
 }
 
-#ImgProgress, #successMsg, #textSpan, #err{
+#submitMsg{
     font-size: 24px;
     font-weight: 400;
     line-height: 150%;
     font-style: normal;
     text-align: center;
-    font-family: sans-serif;
     color: #334155;
+}
+
+.notes-ques-forms{
+    position: relative;
+}
+
+.notes-ques-area {
+    width: 760px;
+    height: 146px;
+    background: #FAFAFA;
+    border-radius: 20px;
+    margin-top: 20px;
+    align-items: center;
+    flex-wrap: wrap;
+    overflow-y: auto;
+}
+
+.notes-question-num {
+    border-radius: 100%;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: #334155;
+    margin-left: 40px;
+}
+
+.notes-name {
+    border-style: none;
+    width: 640px;
+    height: 40px;
+    margin-left: 30px;
+    margin-top: 20px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    color: #475569;
+    background-color: #FAFAFA;
+}
+
+.notes-link {
+    border-style: none;
+    width: 640px;
+    height: 40px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    color: #475569;
+    background-color: #FAFAFA;
+    margin-left: 85px;
+    margin-top: 20px;
 }
