--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -1,56 +1,88 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto:wght@400;500&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+}
+body {
+    font-family: Inter;
+}
+
 body {
     margin: 0;
     padding: 0;
     position: relative;
 }
 
-.dashboard__container {
+.heading{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    min-height: 60px;
+    overflow: hidden;
+    position: relative;
+    padding: 0 3rem;
+}
+
+.dashboard__img {
+   height: 80px;
+   position: absolute;
+   top: 0;
+   bottom: 0;
+   right: 0;
+   left: 0;
+   margin: auto;
+   align-self: center;
+   justify-self: center;
+}
+
+#logout{
+    width: 75px;
+    height: 27px;
+    cursor: pointer;
+    font-size: 12px;
+    font-weight: 500;
+    border-radius: 4px;
+    color: #0077FF;
+    background-color: #FFFFFF;
+    border: 1px solid #0077FF;
+}
+
+.hrule_1{
+    width: 100vw;
+    margin: 0;
+    border: 0.5px solid rgba(0, 0, 0, 0.05);
+}
+
+.dashboard__container{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-family: "Inter";
-    min-height: 100vh;
-}
-
-.dashboard__img {
-    position: absolute;
-    left: 609px;
-    top: 74px;
-    width: 221.63px;
-    height: 96px;
-    margin-bottom: 25px;
 }
 
 #dashboard__text {
-    position: absolute;
-    left: 536px;
-    top: 195px;
-    width: 368px;
-    height: 22px;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
+    font-size: 24px;
+    line-height: 29px;
     text-align: center;
     color: #475569;
-    margin-bottom: 69px;
+    margin-top: 125px;
+    margin-bottom: 62px;
 }
 
 #text__assessment {
-    position: absolute;
     width: 368px;
     height: 116px;
-    left: 536px;
-    top: 286px;
+    cursor: pointer;
     border: 2px solid #E2E8F0;
     box-sizing: border-box;
     border-radius: 12px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 53px;
+    margin-bottom: 45px;
 }
 
 #text__assessment:hover {
@@ -58,12 +90,10 @@ body {
 }
 
 #text__span {
-    border-style: none;
     width: 182px;
     height: 22px;
     cursor: pointer;
     background: #FFFFFF;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 17px;
@@ -73,12 +103,9 @@ body {
 }
 
 #video__assessment {
-    position: absolute;
     width: 368px;
     height: 116px;
-    left: 536px;
-    top: 455px;
-    bottom: 453px;
+    cursor: pointer;
     background: #FFFFFF;
     border: 2px solid #E2E8F0;
     box-sizing: border-box;
@@ -86,7 +113,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 53px;
+    margin-bottom: 45px;
 }
 
 #video__assessment:hover {
@@ -94,27 +121,22 @@ body {
 }
 
 #video__span {
-    border-style: none;
     width: 168px;
     height: 22px;
     cursor: pointer;
     background: #FFFFFF;
     text-align: center;
-    font-family: sans-serif;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 17px;
     line-height: 22px;
     color: #64748B;
 }
 
 #books__assessment {
-    position: absolute;
     width: 368px;
     height: 116px;
-    left: 536px;
-    top: 622px;
-    bottom: 286px;
+    cursor: pointer;
     background: #FFFFFF;
     border: 2px solid #E2E8F0;
     box-sizing: border-box;
@@ -122,7 +144,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 53px;
+    margin-bottom: 45px;
 }
 
 #books__assessment:hover{
@@ -130,15 +152,13 @@ body {
 }
 
 #books__span {
-    border-style: none;
     width: 168px;
     height: 22px;
     cursor: pointer;
     background: #FFFFFF;
     text-align: center;
-    font-family: sans-serif;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 17px;
     line-height: 22px;
     color: #64748B;
