--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,6 +1,25 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto:wght@400;500&display=swap');
+
+*{
     margin: 0;
     padding: 0;
+}
+
+body {
+    font-family: Inter;
+}
+
+.imgDiv{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 95px;
+}
+
+.login__img {
+    width: 70px;
+    height: 160px;
+    margin-bottom: 17px;
 }
 
 .login__container {
@@ -8,18 +27,12 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-family: "Inter";
-    min-height: 100vh;
-}
-
-.login__img {
-    margin-bottom: 40px;
+    margin-bottom: 55px;
 }
 
 .login_text {
     font-weight: 600;
     font-size: 22px;
-    font-family: sans-serif;
     font-style: normal;
     line-height: 27px;
     color: #1E293B;
@@ -28,205 +41,215 @@ body {
 }
 
 .span_text {
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
+    font-size: 16px;
+    line-height: 19px;
     text-align: center;
     color: #475569;
-    margin-bottom: 38px;
-}
-
-#number {
-    width: 390px;
-    height: 64px;
-    font-size: medium;
-    text-align: center;
-    border: 2px solid #E2E8F0;
-    box-sizing: border-box;
-    border-radius: 12px;
     margin-bottom: 36px;
 }
 
+#phone{
+    height: 73px;
+    font-size: medium;
+    text-align: center;
+    box-sizing: border-box;
+    flex:1;
+    display: flex;
+    border: 0;
+}
+
+#phone:focus{
+    outline: 0;
+}
+
 .or {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
     font-size: 16px;
+    margin-top: 4px;
+    color: #475569;
+    font-weight: 500;
     line-height: 19px;
     text-align: center;
-    color: #475569;
-    margin-bottom: 18px;
+    font-style: normal;
+    margin: 18px 0;
 }
 
-#loginScreen {
-    width: 390px;
-    height: 64px;
+#email {
+    width: 368px;
+    height: 60px;
     font-size: medium;
-    color: #64748B;
-    border: 2px solid #E2E8F0;
-    box-sizing: border-box;
-    border-radius: 12px;
-    background: white;
-    margin-left: 6px;
-    margin-bottom: 18px;
-}
-
-#loginScreen:hover {
-    border-color: #0077FF;
-}
-
-#continue {
-    width: 390px;
-    height: 64px;
-    font-size: medium;
-    color: #FFFFFF;
-    border: 2px solid #E2E8F0;
-    box-sizing: border-box;
-    border-radius: 12px;
-    background: #0077FF;
     text-align: center;
+    border: 2px solid #E2E8F0;
+    box-sizing: border-box;
+    border-radius: 8px;
+}
+
+.wrongUser{
+    font-style: normal;
+    font-size: 15px;
+    line-height: 15px;
+    color: #FF3636;
+    margin-top: 4px;
+}
+
+.wrongPhone{
+    font-style: normal;
+    font-size: 15px;
+    line-height: 15px;
+    color: #FF3636;
+}
+
+#submit{
+    width: 368px;
+    height: 60px;
     display: flex;
-    justify-content: center;
+    cursor: pointer;
+    color: #FFFFFF;
+    border-radius: 8px;
     align-items: center;
+    background: #0077FF;
+    box-sizing: border-box;
+    justify-content: center;
+    margin-top: 39px;
 }
 
-#continue:hover {
-    border-color: #64748B;
+.imgDiv{
+    position: relative;
 }
 
-#continue img {
+#submit img {
     width: 18px;
+    position: absolute;
+    top: -56px;
+    left: 5px;
     filter: invert(1);
 }
 
-
-
-/* The Modal (background) */
-.modal-3 {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 50px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content-3 {
-    background-color: #fefefe;
-    left: 50%;
-    top: 50%;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    padding: 20px;
-    border: 1px solid #888;
-    width: 564px;
-    border-radius: 20px;
-}
-
-/* The Close Button */
-.close-3 {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close-3:hover,
-.close-3:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.close-div-3 {
-	display: flex;
-    flex-flow: column wrap;
-    align-content: flex-end;
-}
-
-.form-div-3 {
-	display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-#cont_div {
+.phoneInputContainer{
+    position: relative;
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex-direction: row;
+    width: 368px;
+    height: 60px;
+    border: 2px solid #E2E8F0;
+    box-sizing: border-box;
+    border-radius: 8px;
+    overflow: hidden;
+    margin-bottom: 6px;
 }
 
-.btn-3 {
-    width: 368px;
-    height: 56px;
-    background: #0077FF;
+.phoneInputContainer .codeContainer{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 8px;
-    margin-bottom: 20px;
-    margin-top: 40px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    color: white;
-    border: 2px solid #0077FF;
+    height: 100%;
 }
 
-.btn-3:hover {
-    border-color: #64748B;
-}
-
-.otp_text{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 27px;
-    line-height: 27px;
-    color: #212121;
-    margin-bottom: 13px;
-}
-
-.verify{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    color: #666666;
-}
-
-#otp {
-    margin-top: 21px;
-    width: 368px;
-    height: 56px;
-    background: white;
-    border-radius: 8px;
+.phoneInputContainer .codeContainer select{
+    height: 100%;
+    border-right: 1px solid #e1e1e1;
+    border-left: 0;
+    border-top: 0;
+    border-bottom: 0;
+    width: 70px;
+    outline: 0;
     text-align: center;
-    font-family: "Inter";
-    font-style: normal;
-    font-size: 25px;
-    
+    font-size: medium;
 }
 
-.resend {
+.emptyFieldMsg{
+    color: red;
+    margin-top: 20px;
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 12px;
-    color: #0077FF;
-    margin-top: 10px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    text-align: center;
 }
+
+.green{
+    width: 23px;
+    height: 69px;
+    background: #80C241;
+    border-radius: 4px;
+    position: relative;
+    bottom: 113px;
+}
+
+.blue{
+    width: 23px;
+    height: 60px;
+    background: #3399FF;
+    border-radius: 4px;
+    position: relative;
+    bottom: 48px;
+    left: 10px;
+}
+
+.yellow{
+    width: 23px;
+    height: 53px;
+    background: #FDC500;
+    border-radius: 4px;
+    position: relative;
+    left: 17px;
+    top: 7.5px;
+}
+
+.sentMailText{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #1E293B;
+    position: relative;
+    bottom: 168px;
+    left: 67px;
+    width: 321px;
+}
+
+/* The snackbar - position it at the bottom and in the middle of the screen */
+#snackbar {
+    width: 486px;
+    height: 69px;
+    margin: auto;
+    visibility: hidden; /* Hidden by default. Visible on click */
+    color: #fff; /* White text color */
+    background: #FFFFFF;
+    border: 1px solid #E2E8F0;
+    text-align: center; /* Centered text */
+    border-radius: 4px; /* Rounded borders */
+    z-index: 1; /* Add a z-index if needed */
+    left: 42%; /* Center the snackbar */
+    bottom: 30px; /* 30px from the bottom */
+  }
+  
+  /* Show the snackbar when clicking on a button (class added with JavaScript) */
+  #snackbar.show {
+    visibility: visible; /* Show the snackbar */
+    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+    However, delay the fade out process for 2.5 seconds */
+    -webkit-animation: fadein 0.5s;
+    animation: fadein 0.5s;
+  }
+  
+  /* Animations to fade the snackbar in and out */
+  @-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+  }
+  
+  @keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+  }
